# obsidian-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  commands.md  justfile
.github/workflows/: ci.yml  release.yml
evaluations/: work-system-v0.3.0.xml
obsidian-vault/: Projects.base  Start.md  Todo.md
obsidian-vault/Knowledge/: Dead End.md  Orphan.md
obsidian-vault/Projects/: Rust.md
scripts/: inspect.sh
src/: cli.rs  domain.rs  lib.rs  main.rs  models.rs
src/server/: bases.rs  change_sets.rs  knowledge_graph.rs  mod.rs  prompts.rs  resources.rs  tests.rs  tools.rs  work_system.rs  workspace.rs
test-vault/: Projects.base  Tasks.md
test-vault/.obsidian/: workspace.json
test-vault/Areas/: Engineering.md
test-vault/Inbox/: Quick capture.md
test-vault/Notes/: Rust Patterns.md
test-vault/Projects/: Home Renovation.md  WorkOS MCP.md
tests/: resources.rs
