[package]
name = "obsidian-mcp"
version = "0.3.0"
edition = "2024"
description = "Local MCP server for using an Obsidian vault from Codex"
license = "MIT"
repository = "https://github.com/lukas-szewczyk/obsidian-mcp"
readme = "README.md"
publish = false

[dependencies]
rmcp = { version = "1.7.0", features = ["client", "transport-io"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
rmcp = "1.7.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
